<resources>
    <string name="app_name">易购商城</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home">主页</string>
    <string name="hot">热卖</string>
    <string name="catagory">分类</string>
    <string name="cart">购物车</string>
    <string name="mine">我的</string>
    <string name="buy">立即购买</string>
    <string name="total">合计:</string>
    <string name="settlement">去结算</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="select_all">全选</string>
    <string name="complete">完成</string>
    <string name="addToCart">已添加到购物车</string>
    <string name="warelist">商品列表</string>
    <string name="order_default">默认</string>
    <string name="order_price">价格</string>
    <string name="order_sales">销量</string>
    <string name="detail">商品详情</string>
    <string name="share">分享</string>
    <string name="phone_hint">请输入手机号码</string>
    <string name="passwd_hint">请输入登陆密码</string>
    <string name="login">登录</string>
    <string name="register">立即注册</string>
    <string name="forget_pass">忘记密码？</string>
    <string name="token_error">授权已过期，请重新登录</string>
    <string name="touch_login">点击登录</string>
    <string name="myOrder">我的订单</string>
    <string name="logout">退出登录</string>
    <string name="collect">我的收藏</string>
    <string name="address">收货地址</string>
    <string name="logistics">物流动态</string>

</resources>
